src/pages/messaging/agent-chat-api/v3.4/rtm-pushes/index.mdx
---
weight: 23
category: "messaging"
subcategory: "agent-chat-api"
title: "RTM pushes"
tagline: "The reference of LiveChat RTM API pushes."
desc: "This document contains a reference of LiveChat RTM API pushes."
apiVersion: "3.4"
---

This document contains a reference of **pushes** available in the **LiveChat Agent Chat API**. Similarly to [webhooks](/management/webhooks), pushes notify you when specific events occur. They're usually generated as result of RTM API actions, but it's also possible to receive them in result of Web API actions.

<Section>
<Text>

## Introduction

Here's what you need to know about **pushes**:

- They are generated primarily by RTM API actions, but also by Web API actions.
- They notify you when specific events occur.
- Can be **delivered** only in the websocket transport.
- You don't need to register pushes to receive them.
- Their equivalents in Web API are [webhooks](/management/configuration-api/v3.4/#webhooks). Pushes and webhooks have similar payloads.
- There are no retries for pushes. To determine if a user has seen an event, compare the [event's](/messaging/agent-chat-api/v3.4/data-structures/#response) `created_at` parameter with the [user's](/messaging/agent-chat-api/v3.4/data-structures/#users) `events_seen_up_to` field.

## Available pushes

|                   |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| ----------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Chats**         | [`incoming_chat`](#incoming_chat) [`chat_deactivated`](#chat_deactivated) [`chat_deleted`](#chat_deleted) [`thread_deleted`](#thread_deleted) [`threads_deleted`](#threads_deleted)                                                                                                                                                                                                                                                                                                                                                                             |
| **Chat access**   | [`chat_access_updated`](#chat_access_updated) [`chat_transferred`](#chat_transferred)                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| **Chat users**    | [`user_added_to_chat`](#user_added_to_chat) [`user_removed_from_chat`](#user_removed_from_chat)                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| **Events**        | [`incoming_event`](#incoming_event) [`event_updated`](#event_updated)[`incoming_rich_message_postback`](#incoming_rich_message_postback)                                                                                                                                                                                                                                                                                                                                                                                                                        |
| **Properties**    | [`chat_properties_updated`](#chat_properties_updated) [`chat_properties_deleted`](#chat_properties_deleted) [`thread_properties_updated`](#thread_properties_updated) [`thread_properties_deleted`](#thread_properties_deleted) [`event_properties_updated`](#event_properties_updated) [`event_properties_deleted`](#event_properties_deleted)                                                                                                                                                                                                                 |
| **Thread tags**   | [`thread_tagged`](#thread_tagged) [`thread_untagged`](#thread_untagged)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| **Customers**     | [`incoming_customers`](#incoming_customers) [`incoming_customer`](#incoming_customer) [`customer_updated`](#customer_updated) [`customer_page_updated`](#customer_page_updated) [`customer_banned`](#customer_banned) [`customer_transferred`](#customer_transferred) [`customer_left`](#customer_left)                                                                                                                                                                                                                                                         |
| **Status**        | [`routing_status_set`](#routing_status_set) [`agent_disconnected`](#agent_disconnected)                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| **Configuration** | [`agent_created`](#agent_created) [`agent_approved`](#agent_approved) [`agent_updated`](#agent_updated) [`agent_suspended`](#agent_suspended) [`agent_unsuspended`](#agent_unsuspended) [`agent_deleted`](#agent_deleted) [`auto_access_added`](#auto_access_added) [`auto_access_updated`](#auto_access_updated) [`auto_access_deleted`](#auto_access_deleted) [`bot_created`](#bot_created) [`bot_updated`](#bot_updated) [`bot_deleted`](#bot_deleted) [`group_created`](#group_created) [`group_updated`](#group_updated) [`group_deleted`](#group_deleted) |
| **Other**         | [`events_marked_as_seen`](#events_marked_as_seen) [`incoming_sneak_peek`](#incoming_sneak_peek) [`incoming_typing_indicator`](#incoming_typing_indicator) [`incoming_multicast`](#incoming_multicast) [`chat_unfollowed`](#chat_unfollowed) [`queue_positions_updated`](#queue_positions_updated) [`customer_unfollowed`](#customer-unfollowed)                                                                                                                                                                                                                 |

</Text>

<Code>

<CodeResponse title={'general push format'}>

```json
{
  "version": "<api_version>",
  "request_id": "<request_id>", // optional, applies only to the requester
  "action": "<action>",
  "type": "push",
  "payload": {
  // optional payload
  }
}
```

</CodeResponse>

</Code>

</Section>

## Chats

### `incoming_chat`

Informs about a chat coming with a new thread. The push payload contains the whole chat data structure. If the chat was started with some initial events, the thread object contains them.

<CodeResponse title={'Sample push payload'}>

```json
{
  "requester_id": "smith@example.com",
  "chat": {
    "id": "PJ0MRSHTDG",
    "users": [
      // array of "User" objects
    ],
    "properties": {
      "0805e283233042b37f460ed8fbf22160": {
      "string_property": "string value"
      }
      // ...
    },
    "thread": {
      // "Thread" object
    },
    "transferred_from": {
      "group_ids": [ 1 ],
      "agent_ids": [ "agent@example.com" ]
    }
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                             |
| ---------------------- | ----------------------------------------------------------- |
| **Action**             | `incoming_chat`                                             |
| **Webhook equivalent** | [`incoming_chat`](/management/webhooks/v3.4/#incoming_chat) |

### `chat_deactivated`

Informs that a chat was deactivated by closing the currently open thread.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c" // optional
}
```

</CodeResponse>

#### Specifics

|                        |                                                                   |
| ---------------------- | ----------------------------------------------------------------- |
| **Action**             | `chat_deactivated`                                                |
| **Webhook equivalent** | [`chat_deactivated`](/management/webhooks/v3.4/#chat_deactivated) |

#### Push payload

| Field     | Notes                                         |
| --------- | --------------------------------------------- |
| `user_id` | Missing if a thread was closed by the router. |

### `chat_deleted`

Informs that a chat was deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG"
}
```

</CodeResponse>

#### Specifics

|                        |                |
| ---------------------- | -------------- |
| **Action**             | `chat_deleted` |
| **Webhook equivalent** | -              |

### `thread_deleted`

Informs that a thread was deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8"
}
```

</CodeResponse>

#### Specifics

|                        |                  |
| ---------------------- | ---------------- |
| **Action**             | `thread_deleted` |
| **Webhook equivalent** | -                |

### `threads_deleted`

Informs that several threads from a specific date range or with the same tag were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "date_from": "2017-10-12T15:19:21.010200Z",
  "date_to": "2019-10-12T15:19:21.010200Z",
  "tag": "bug_report"
}
```

</CodeResponse>

#### Specifics

|                        |                   |
| ---------------------- | ----------------- |
| **Action**             | `threads_deleted` |
| **Webhook equivalent** | -                 |

## Chat access

### `chat_access_updated`

Informs about the update of a user's access to a particular chat. It contains the updated [access](/messaging/agent-chat-api/v3.4/data-structures/#access-1) data structure.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "PJ0MRSHTDG",
  "access": {
    "group_ids": [0, 1]
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                         |
| ---------------------- | ----------------------------------------------------------------------- |
| **Action**             | `chat_access_updated`                                                   |
| **Webhook equivalent** | [`chat_access_updated`](/management/webhooks/v3.4/#chat_access_updated) |

#### Push payload

| Field    | Notes                                                                                              |
| -------- | -------------------------------------------------------------------------------------------------- |
| `id`     | Chat ID                                                                                            |
| `access` | The updated chat [access](/messaging/agent-chat-api/v3.4/data-structures/#access-1) data structure |

### `chat_transferred`

Informs that a chat was transferred to a different group or to an agent.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "requester_id": "jones@example.com",
  "reason": "manual",
  "transferred_to": {
    "group_ids": [ 19 ],
    "agent_ids": ["smith@example.com"],
  },
  "queue": {
    "position": 42,
    "wait_time": 1337,
    "queued_at": "2019-12-09T12:01:18.909000Z"
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                   |
| ---------------------- | ----------------------------------------------------------------- |
| **Action**             | `chat_transferred`                                                |
| **Webhook equivalent** | [`chat_transferred`](/management/webhooks/v3.4/#chat_transferred) |

#### Push payload

| Field            | Notes                                                                    |
| ---------------- | ------------------------------------------------------------------------ |
| `thread_id`      | Present if the chat is active.                                           |
| `transferred_to` | IDs of the groups and agents the chat is assigned to after the transfer. |
| `reason` **\***  | Informs why the chat was transferred.                                    |
| `queue`          | Present if the chat is queued after the transfer.                        |

**\*)**
Possible reasons: `manual`, `inactive`, `assigned`, `unassigned`, `other`.

## Chat users

### `user_added_to_chat`

Informs that a user (Customer or Agent) was added to a chat.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "user": {
  // "User > Customer" or "User > Agent" object
  },
  "reason": "manual",
  "requester_id": "smith@example.com"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                       |
| ---------------------- | --------------------------------------------------------------------- |
| **Action**             | `user_added_to_chat`                                                  |
| **Webhook equivalent** | [`user_added_to_chat`](/management/webhooks/v3.4/#user_added_to_chat) |

#### Push payload

| Field          | Notes                                            |
| -------------- | ------------------------------------------------ |
| `thread_id`    | Present when a user was added to an active chat. |
| `reason`       | Why the user was added.                          |
| `requester_id` | Present if the user was added by an agent.       |

### `user_removed_from_chat`

Informs that a user (Customer or Agent) was removed from a chat.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "user_id": "agent@example.com",
  "reason": "manual",
  "requester_id": "smith@example.com"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                               |
| ---------------------- | ----------------------------------------------------------------------------- |
| **Action**             | `user_removed_from_chat`                                                      |
| **Webhook equivalent** | [`user_removed_from_chat`](/management/webhooks/v3.4/#user_removed_from_chat) |

#### Push payload

| Field          | Notes                                                |
| -------------- | ---------------------------------------------------- |
| `thread_id`    | Present when a user was removed from an active chat. |
| `reason`       | Why the user was removed.                            |
| `requester_id` | Present if the user was removed by an agent.         |

## Events

### `incoming_event`

Informs about an incoming [event](/messaging/agent-chat-api/v3.4/data-structures/#events) sent to a chat.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event": {
    "id": "Q20163UAHO_2",
    "created_at": "2019-12-05T07:27:08.820000Z",
    "visibility": "all",
    "type": "message",
    "properties": {
      "0805e283233042b37f460ed8fbf22160": {
      "string_property": "string value"
      }
    },
    "text": "Hello",
    "author_id": "b7eff798-f8df-4364-8059-649c35c9ed0c"
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                               |
| ---------------------- | ------------------------------------------------------------- |
| **Action**             | `incoming_event`                                              |
| **Webhook equivalent** | [`incoming_event`](/management/webhooks/v3.4/#incoming_event) |

### `event_updated`

Informs that an [event](/messaging/agent-chat-api/v3.4/data-structures/#events) was updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "123-123-123-123",
  "thread_id": "E2WDHA8A",
  "event": {
  // "Event" object
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                             |
| ---------------------- | ----------------------------------------------------------- |
| **Action**             | `event_updated`                                             |
| **Webhook equivalent** | [`event_updated`](/management/webhooks/v3.4/#event_updated) |

### `incoming_rich_message_postback`

Informs about an incoming [rich message](/messaging/agent-chat-api/v3.4/data-structures/#rich-message) postback. The push payload contains the info on the postback itself, as well as the chat it was sent in.

<CodeResponse title={'Sample push payload'}>

```json
{
  "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event_id": "a0c22fdd-fb71-40b5-bfc6-a8a0bc3117f7",
  "postback": {
  "id": "action_yes",
  "toggled": true
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                               |
| ---------------------- | --------------------------------------------------------------------------------------------- |
| **Action**             | `incoming_rich_message_postback`                                                              |
| **Webhook equivalent** | [`incoming_rich_message_postback`](/management/webhooks/v3.4/#incoming_rich_message_postback) |

## Properties

### `chat_properties_updated`

Informs about those chat properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "properties": {
  "rating": {
    "score": 1,
    "comment": "Well done!"
  }
  // ...
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                 |
| ---------------------- | ------------------------------------------------------------------------------- |
| **Action**             | `chat_properties_updated`                                                       |
| **Webhook equivalent** | [`chat_properties_updated`](/management/webhooks/v3.4/#chat_properties_updated) |

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `chat_properties_deleted`

Informs about those chat properties that were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "properties": {
    "rating": ["score", "comment"]
    },
    // ...
  }
```

</CodeResponse>

#### Specifics

|                        |                                                                                 |
| ---------------------- | ------------------------------------------------------------------------------- |
| **Action**             | `chat_properties_deleted`                                                       |
| **Webhook equivalent** | [`chat_properties_deleted`](/management/webhooks/v3.4/#chat_properties_deleted) |

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `thread_properties_updated`

Informs about those thread properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "properties": {
  "rating": {
    "score": 1,
    "comment": "Well done!"
  }
  // ...
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                     |
| ---------------------- | ----------------------------------------------------------------------------------- |
| **Action**             | `thread_properties_updated`                                                         |
| **Webhook equivalent** | [`thread_properties_updated`](/management/webhooks/v3.4/#thread_properties_updated) |

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `thread_properties_deleted`

Informs about those thread properties that were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "properties": {
    "rating": ["score", "comment"]
    },
    // ...
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                     |
| ---------------------- | ----------------------------------------------------------------------------------- |
| **Action**             | `thread_properties_deleted`                                                         |
| **Webhook equivalent** | [`thread_properties_deleted`](/management/webhooks/v3.4/#thread_properties_deleted) |

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `event_properties_updated`

Informs about those event properties that were updated.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event_id": "2_E2WDHA8A",
  "properties": {
  "rating": {
    "score": 1,
    "comment": "Well done!"
  }
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                                   |
| ---------------------- | --------------------------------------------------------------------------------- |
| **Action**             | `event_properties_updated`                                                        |
| **Webhook equivalent** | [`event_properties_updated`](/management/webhooks/v3.4/#event_properties_updated) |

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

### `event_properties_deleted`

Informs about those event properties that were deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event_id": "2_E2WDHA8A",
  "properties": {
    "rating": ["score", "comment"]
    },
    // ...
  }
```

</CodeResponse>

#### Specifics

|                        |                                                                                   |
| ---------------------- | --------------------------------------------------------------------------------- |
| **Action**             | `event_properties_deleted`                                                        |
| **Webhook equivalent** | [`event_properties_deleted`](/management/webhooks/v3.4/#event_properties_deleted) |

#### Push payload

| Field        | Notes                                                                                                        |
| ------------ | ------------------------------------------------------------------------------------------------------------ |
| `properties` | This is not a full `properties` object. This push shows only the properties that have been recently updated. |

## Thread tags

### `thread_tagged`

Informs that a chat thread was tagged.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "tag": "bug_report"
}
```

</CodeResponse>

#### Specifics

|                        |                                                             |
| ---------------------- | ----------------------------------------------------------- |
| **Action**             | `thread_tagged`                                             |
| **Webhook equivalent** | [`thread_tagged`](/management/webhooks/v3.4/#thread_tagged) |

### `thread_untagged`

Informs that a chat thread was untagged.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "tag": "bug_report"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                 |
| ---------------------- | --------------------------------------------------------------- |
| **Action**             | `thread_untagged`                                               |
| **Webhook equivalent** | [`thread_untagged`](/management/webhooks/v3.4/#thread_untagged) |

## Customers

### `incoming_customers`

Informs about customers the agent should be aware of. It's sent after [`login`](#login).

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer_monitoring_level": "invited",
  "customers": [{
    // "Customer" user object
  }]
}
```

</CodeResponse>

#### Specifics

|                        |                                                                     |
| ---------------------- | ------------------------------------------------------------------- |
| **Action**             | `incoming_customer`                                                 |
| **Webhook equivalent** | [`incoming_customer`](/management/webhooks/v3.4/#incoming_customer) |

### `incoming_customer`

Informs that a new or returning customer is available to the agent. It's sent when:

- a new customer registers.
- a customer, who previously left the tracked website, returns.
- an already followed customer, who was temporarily unavailable to the agent, becomes available again (for example, the customer was transferred between groups).

<CodeResponse title={'Sample push payload'}>

```json
{
  // "Customer" user object
}
```

</CodeResponse>

#### Specifics

|                        |                                                                     |
| ---------------------- | ------------------------------------------------------------------- |
| **Action**             | `incoming_customer`                                                 |
| **Webhook equivalent** | [`incoming_customer`](/management/webhooks/v3.4/#incoming_customer) |

### `customer_updated`

Informs that customer's data changed. The push payload contains the updated fields.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "name": "Thomas Anderson",
  "email": "t.anderson@example.com",
  "avatar": "https://example.com/avatars/1.jpg",
  "type": "customer",
  "session_fields": [{
    "custom_key": "custom_value"
  }, {
    "another_custom_key": "another_custom_value"
  }]
}
```

</CodeResponse>

#### Specifics

|                        |                    |
| ---------------------- | ------------------ |
| **Action**             | `customer_updated` |
| **Webhook equivalent** | -                  |

### `customer_page_updated`

Informs that a Customer moved to another page of the website.

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "visit_id": 42,
  "opened_at": "2017-10-12T15:19:21.010200Z",
  "url": "https://www.livechat.com/",
  "title": "LiveChat - Homepage"
}
```

</CodeResponse>

#### Specifics

|                        |                         |
| ---------------------- | ----------------------- |
| **Action**             | `customer_page_updated` |
| **Webhook equivalent** | -                       |

### `customer_banned`

Informs that a Customer was banned for a specified number of days.

<CodeResponse title={'Sample push payload'}>

```json
{
  "customer_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "ban": {
  "days": 5
  }
}
```

</CodeResponse>

#### Specifics

|                        |                   |
| ---------------------- | ----------------- |
| **Action**             | `customer_banned` |
| **Webhook equivalent** | -                 |

### `customer_transferred`

Informs that a customer is no longer available to the agent.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "transferred_to": {
    "group_ids": [1]
  },
  "followed": true
}
```

</CodeResponse>

#### Specifics

|                        |                        |
| ---------------------- | ---------------------- |
| **Action**             | `customer_transferred` |
| **Webhook equivalent** | -                      |

### `customer_left`

Informs that a Customer left the tracked website.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "left_at": "2017-10-12T15:19:21.010200Z"
}
```

</CodeResponse>

#### Specifics

|                        |                 |
| ---------------------- | --------------- |
| **Action**             | `customer_left` |
| **Webhook equivalent** | -               |

## Status

### `routing_status_set`

Informs that an Agent's or Bot Agent's status was changed.

<CodeResponse title={'Sample push payload'}>

```json
{
  "agent_id": "smith@example.com",
  "status": "accepting_chats"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                       |
| ---------------------- | --------------------------------------------------------------------- |
| **Action**             | `routing_status_set`                                                  |
| **Webhook equivalent** | [`routing_status_set`](/management/webhooks/v3.4/#routing_status_set) |

### `agent_disconnected`

Informs that an Agent was disconnected. The payload contains the reason of Customer's disconnection.

<CodeResponse title={'Sample push payload'}>

```json
{
  "reason": "misdirected_request",
  "data": {
  // optional
  "region": "fra"
  }
}
```

</CodeResponse>

#### Specifics

|                        |                      |
| ---------------------- | -------------------- |
| **Action**             | `agent_disconnected` |
| **Webhook equivalent** | -                    |

#### Possible reasons

| Type                            | Notes                                                  |
| ------------------------------- | ------------------------------------------------------ |
| `access_token_revoked`          | Agent access token has been revoked.                   |
| `access_token_expired`          | Access token life time has elapsed.                    |
| `license_expired`               | License has expired.                                   |
| `agent_deleted`                 | Agent account has been deleted.                        |
| `agent_logged_out_remotely`     | Agent has been logged out remotely.                    |
| `agent_disconnected_by_server`  | Agent has been disconnected by the server.             |
| `unsupported_version`           | Connecting to an unsupported version of the Agent API. |
| `ping_timeout`                  | Not receiving ping for some time from the Customer.    |
| `internal_error`                | Internal error                                         |
| `too_many_connections`          | Agent reached the max. number of connections.          |
| `misdirected_connection` **\*** | Agent connected to the server in the wrong region.     |
| `product_version_changed`       | Product version has been changed.                      |
| `license_not_found`             | License with the specified ID doesn't exist.           |

**\*)**
Also, `misdirected_connection` returns the correct `region` value in the optional `data` object.
With this piece of information, the client is able to figure out where it should be connected.

## Configuration

### `agent_created`

Informs that a new agent account was created. The payload contains the full state of the [agent](messaging/agent-chat-api/v3.4/data-structures/#agent) data structure, including empty fields.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "smith@example.com",
  "name": "Agent Smith",
  "role": "viceowner",
  "awaiting_approval": false,
  "groups": [
    {
      "id": 5,
      "priority": "first"
    },
    {
      "id": 2,
      "priority": "last"
    },
    {
      "id": 1,
      "priority": "normal"
    }
  ],
  "notifications": [
    "new_visitor",
    "new_goal",
    "visitor_is_typing"
  ],
  "email_subscriptions": [
    "weekly_summary"
  ],
  "work_scheduler": {
    "monday": {
      "start": "08:30",
      "end": "12:30"
    }
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                             |
| ---------------------- | ----------------------------------------------------------- |
| **Action**             | `agent_created`                                             |
| **Webhook equivalent** | [`agent_created`](/management/webhooks/v3.4/#agent_created) |

### `agent_approved`

Informs that an agent's account was approved and is now active.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "smith@example.com"
}
```

</CodeResponse>

#### Specifics

|                        |                                                               |
| ---------------------- | ------------------------------------------------------------- |
| **Action**             | `agent_approved`                                              |
| **Webhook equivalent** | [`agent_approved`](/management/webhooks/v3.4/#agent_approved) |

### `agent_updated`

Informs that an agent's configuration changed. Contains only the updated properties.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "smith@example.com",
  "work_scheduler": {
    "monday": {
      "start": "08:30",
      "end": "12:30"
    },
    "friday": {
      "start": "07:30",
      "end": "21:30"
    }
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                             |
| ---------------------- | ----------------------------------------------------------- |
| **Action**             | `agent_updated`                                             |
| **Webhook equivalent** | [`agent_updated`](/management/webhooks/v3.4/#agent_updated) |

### `agent_suspended`

Informs that an agent's account was suspended.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "smith@example.com"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                 |
| ---------------------- | --------------------------------------------------------------- |
| **Action**             | `agent_suspended`                                               |
| **Webhook equivalent** | [`agent_suspended`](/management/webhooks/v3.4/#agent_suspended) |

### `agent_unsuspended`

Informs that an agent's account was unsuspended.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "smith@example.com"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                     |
| ---------------------- | ------------------------------------------------------------------- |
| **Action**             | `agent_unsuspended`                                                 |
| **Webhook equivalent** | [`agent_unsuspended`](/management/webhooks/v3.4/#agent_unsuspended) |

### `agent_deleted`

Informs that an agent's account was deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "smith@example.com"
}
```

</CodeResponse>

#### Specifics

|                        |                                                             |
| ---------------------- | ----------------------------------------------------------- |
| **Action**             | `agent_deleted`                                             |
| **Webhook equivalent** | [`agent_deleted`](/management/webhooks/v3.4/#agent_deleted) |

### `auto_access_added`

Informs that a new [auto access](/management/configuration-api/v3.4/#auto-access) rule was added. The payload contains the full state of the auto access rule data structure, including empty fields.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "pqi8oasdjahuakndw9nsad9na",
  "description": "Chats on livechat.com from United States",
  "access": {
    "groups": [ 1 ]
  },
  "conditions": {
    "domain": {
      "values": [
        {
          "value": "livechat.com",
          "exact_match": true
        }
      ]
    },
    "geolocation": {
      "values": [
        {
          "country": "United States",
          "country_code": "US"
        }
      ]
    }
  },
  "next_id": "1faad6f5f1d6e8fdf27e8af9839783b7"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                     |
| ---------------------- | ------------------------------------------------------------------- |
| **Action**             | `auto_access_added`                                                 |
| **Webhook equivalent** | [`auto_access_added`](/management/webhooks/v3.4/#auto_access_added) |

### `auto_access_updated`

Informs that the configration of an [auto access](/management/configuration-api/v3.4/#auto-access) rule changed. Contains only the updated properties.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "pqi8oasdjahuakndw9nsad9na",
  "access": {
    groups: [ 0, 42 ]
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                                         |
| ---------------------- | ----------------------------------------------------------------------- |
| **Action**             | `auto_access_updated`                                                   |
| **Webhook equivalent** | [`auto_access_updated`](/management/webhooks/v3.4/#auto_access_updated) |

### `auto_access_deleted`

Informs that an [auto access](/management/configuration-api/v3.4/#auto-access) rule was deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "pqi8oasdjahuakndw9nsad9na"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                         |
| ---------------------- | ----------------------------------------------------------------------- |
| **Action**             | `auto_access_deleted`                                                   |
| **Webhook equivalent** | [`auto_access_deleted`](/management/webhooks/v3.4/#auto_access_deleted) |

### `bot_created`

Informs that a new bot was added. The payload contains the full state of the [bot](/management/configuration-api/v3.4/#bots) data structure, including empty fields.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "5c9871d5372c824cbf22d860a707a578",
  "name": "Bot Name",
  "default_group_priority": "first",
  "groups": [
    {
      "id": 0,
      "priority": "normal"
    }
  ],
  "owner_client_id": "asXdesldiAJSq9padj"
}
```

</CodeResponse>

#### Specifics

|                        |                                                         |
| ---------------------- | ------------------------------------------------------- |
| **Action**             | `bot_created`                                           |
| **Webhook equivalent** | [`bot_created`](/management/webhooks/v3.4/#bot_created) |

### `bot_updated`

Informs that a bot's configuration changed. Contains only the updated properties.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "5c9871d5372c824cbf22d860a707a578",
  "name": "New Bot Name",
}
```

</CodeResponse>

#### Specifics

|                        |                                                         |
| ---------------------- | ------------------------------------------------------- |
| **Action**             | `bot_updated`                                           |
| **Webhook equivalent** | [`bot_updated`](/management/webhooks/v3.4/#bot_updated) |

### `bot_deleted`

Informs that a bot was deleted.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "5c9871d5372c824cbf22d860a707a578"
}
```

</CodeResponse>

#### Specifics

|                        |                                                         |
| ---------------------- | ------------------------------------------------------- |
| **Action**             | `bot_deleted`                                           |
| **Webhook equivalent** | [`bot_deleted`](/management/webhooks/v3.4/#bot_deleted) |

### `group_created`

Informs that a group was created within a license. The payload contains the full state of the [group](/management/configuration-api/v3.4/#groups) data structure, including empty fields.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": 42,
  "name": "Sales",
  "language_code": "en",
  "agent_priorities": {
    "agent@example.com": "normal",
    "other_agent@example.com": "first"
  }
}
```

</CodeResponse>

#### Specifics

|                        |                                                               |
| ---------------------- | ------------------------------------------------------------- |
| **Action**             | [`create_group`](/management/configuration-api/#create-group) |
| **Webhook equivalent** | [`group_created`](/management/webhooks/v3.4/#group_created)   |

### `group_deleted`

Informs that a group was deleted within a license.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": 42
}
```

</CodeResponse>

#### Specifics

|                        |                                                               |
| ---------------------- | ------------------------------------------------------------- |
| **Action**             | [`delete_group`](/management/configuration-api/#delete-group) |
| **Webhook equivalent** | [`group_deleted`](/management/webhooks/v3.4/#group_deleted)   |

### `group_updated`

Informs that a group was updated within a license. The push payload only includes the updated fields.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": 42,
  "name": "Sales"
}
```

</CodeResponse>

#### Specifics

|                        |                                                               |
| ---------------------- | ------------------------------------------------------------- |
| **Action**             | [`create_group`](/management/configuration-api/#update-group) |
| **Webhook equivalent** | [`group_created`](/management/webhooks/v3.4/#group_updated)   |

## Other

### `incoming_typing_indicator`

Informs that one of the chat users is currently typing a message. The message hasn't been sent yet. The push payload contains the typing indicator object.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "typing_indicator": {
    "author_id": "smith@example.com",
    "visibility": "all",
    "timestamp": 1574245378,
    "is_typing": true
  }
}
```

</CodeResponse>

#### Specifics

|                        |                             |
| ---------------------- | --------------------------- |
| **Action**             | `incoming_typing_indicator` |
| **Webhook equivalent** | -                           |

### `incoming_sneak_peek`

Informs about the message a Customer is currently typing. The push payload contains the sneak peek object.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "sneak_peek": {
    "author_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
    "text": "Hello",
    "timestamp": 1574245378
  }
}
```

</CodeResponse>

#### Specifics

|                        |                       |
| ---------------------- | --------------------- |
| **Action**             | `incoming_sneak_peek` |
| **Webhook equivalent** | -                     |

### `events_marked_as_seen`

Informs that a user has seen events up to a specific time.

<CodeResponse title={'Sample push payload'}>

```json
{
  "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "chat_id": "PJ0MRSHTDG",
  "seen_up_to": "2017-10-12T15:19:21.010200Z"
}
```

</CodeResponse>

#### Specifics

|                        |                                                                             |
| ---------------------- | --------------------------------------------------------------------------- |
| **Action**             | `events_marked_as_seen`                                                     |
| **Webhook equivalent** | [`events_marked_as_seen`](/management/webhooks/v3.4/#events_marked_as_seen) |

### `incoming_multicast`

Informs about messages sent via the `multicast` method or by the system.

<CodeResponse title={'Sample push payload'}>

```json
{
  "author_id": "smith@example.com",
  "content": {
  "example": {
    "nested": "json"
  }
  },
  "type": "type1"
}
```

</CodeResponse>

#### Specifics

|                        |                      |
| ---------------------- | -------------------- |
| **Action**             | `incoming_multicast` |
| **Webhook equivalent** | -                    |

#### Push payload

| Field       | Required | Notes                                                                                            |
| ----------- | -------- | ------------------------------------------------------------------------------------------------ |
| `author_id` | No       | Present only if the push was generated by the **Multicast** method and not sent from the server. |
| `content`   | Yes      |                                                                                                  |
| `type`      | No       |                                                                                                  |

### `chat_unfollowed`

Informs that a chat has been unfollowed. Useful in multiple connection scenarios, where one app/integration needs to know that another one unfollowed the chat.

<CodeResponse title={'Sample push payload'}>

```json
{
  "chat_id": "PJ0MRSHTDG"
}
```

</CodeResponse>

#### Specifics

|                        |                   |
| ---------------------- | ----------------- |
| **Action**             | `chat_unfollowed` |
| **Webhook equivalent** | -                 |

### `queue_positions_updated`

New positions and wait times for queued chats.

<CodeResponse title={'Sample push payload'}>

```json
[{
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "queue": {
    "position": 42,
    "wait_time": 1337
  }
}, {
  "chat_id": "PJ0VRSATDS",
  "thread_id": "K60QPKSON9",
  "queue": {
    "position": 43,
    "wait_time": 1373
  }
}]
```

</CodeResponse>

#### Specifics

|                        |                           |
| ---------------------- | ------------------------- |
| **Action**             | `queue_positions_updated` |
| **Webhook equivalent** | -                         |

### `customer_unfollowed`

Informs that a customer was unfollowed. Useful in multiple connection scenarios, where one app/integration needs to know that another one unfollowed the customer.

<CodeResponse title={'Sample push payload'}>

```json
{
  "id": "b7eff798-f8df-4364-8059-649c35c9ed0c"
}
```

</CodeResponse>

#### Specifics

|                        |                       |
| ---------------------- | --------------------- |
| **Action**             | `customer_unfollowed` |
| **Webhook equivalent** | -                     |
